fixed mobile gallery spacing in image display section, gave some padding to doc

--- a/css/documentation.css
+++ b/css/documentation.css
@@ -1,5 +1,3 @@
-
-
 .sidebar ul {
     list-style-type: none;
     padding: 0;
@@ -38,6 +36,12 @@ h1 {
 h5 {
   color:rgb(107, 26, 16);
   font-size: 1.44rem;
+}
+
+h4 {
+    text-align: center;
+    margin-top: 3rem;
+    margin-bottom: 1.5rem;
 }
 
 p {
