--- a/css/gallery-style.css
+++ b/css/gallery-style.css
@@ -183,6 +183,19 @@ main {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
+button.table-data {
+    border: solid 1px var(--primary-color); 
+    background-color: rgba(255, 255, 255, 0.5); 
+    margin-left: -13px;
+    width: fit-content;
+    text-wrap: pretty;
+    text-align: center;
+    font-size: 1rem;
+}
+
+button.table-data .dropdown-menu {
+    overflow-wrap: anywhere;
+}
 
 tbody {
     --bs-table-bg: var(--quinary-color);
@@ -240,18 +253,11 @@ tr::after {
     overflow-wrap: break-word;
 }
 
-button.table-data {
-    border: solid 1px var(--primary-color); 
-    background-color: rgba(255, 255, 255, 0.5); 
-    margin-left: -13px;
-    width: fit-content;
-    text-wrap: pretty;
-    text-align: center;
-    font-size: 1rem;
-}
 
-.narr-icon:nth-child(2) {
+.narr-icon {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
@@ -272,7 +278,7 @@ button.table-data {
 
 #description h5 {
     text-align: center; 
-    margin-bottom: 5vh; 
+    margin-bottom: 1.5rem; 
     font-weight: bold;
 }
 
@@ -292,14 +298,21 @@ hr {
 
 .text-button:active {
     background-color: var(--quaternary-color);
+    opacity: 0.9;
+    color: white;
+}
+.text-button:hover {
+    background-color: var(--quaternary-color);
+    opacity: 0.9;
+    color: white;
 }
 
 @media screen and (max-width: 768px) {
     #image-wrapper {
-        height: 50%;
+        height: 60%;
         width: 100%;
-        left: 0%;
-        top: 20px;
+        left: 0;
+        top: 0;
     }
     #artwork-img {
         max-height: 75vh;
@@ -310,12 +323,18 @@ hr {
     #wrapper-header {
         top: -40px;
         background-color: black;
+        padding: 0px;
+        margin: 0;
     }
     #wrapper-header * {
         padding: 0px;
+        margin: 0;
     }
     #info-text {
         padding: 0px;
+    }
+    .page-title-section {
+        margin-bottom: 40px;
     }
 }
 
